fix: uses text-align center

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,6 @@ body {
   margin: 0;
   padding: 0;
 
-  // align center:
-  display: flex;
-  justify-content: center;
+
   text-align: center;
 }
